--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
-    "lint": "eslint . --fix"
+    "lint": "eslint . --fix",
+    "generate-api": "openapi -i http://localhost:7007/api/docs-json -o src/types/api"
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "core-js": "^3.37.1",
+    "pinia": "^3.0.1",
     "roboto-fontface": "*",
     "vue": "^3.4.31",
     "vuetify": "^3.6.14"
@@ -28,6 +30,7 @@
     "eslint": "^9.14.0",
     "eslint-plugin-vue": "^9.30.0",
     "npm-run-all2": "^7.0.1",
+    "openapi-typescript-codegen": "^0.29.0",
     "sass": "1.77.8",
     "sass-embedded": "^1.77.8",
     "typescript": "~5.6.3",
